unpackaged/objects/Incentive_Setup__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basis_of_Incentives__c</fullName>
        <label>Basis of Incentives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No of Logins</fullName>
                    <default>true</default>
                    <label>No of Logins</label>
                </value>
                <value>
                    <fullName>Disbursal Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSA_Partner_Connector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSA/Partner/ Connector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Role__c</fullName>
        <label>Eligible Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Officer</fullName>
                    <default>true</default>
                    <label>Sales Officer</label>
                </value>
                <value>
                    <fullName>Sr Sales Officer</fullName>
                </value>
                <value>
                    <fullName>Sales Manager -Asst Manager</fullName>
                </value>
                <value>
                    <fullName>Sr Sales Manager-Deputy Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager-UCV</fullName>
                </value>
                <value>
                    <fullName>Sales Officer-UCV</fullName>
                </value>
                <value>
                    <fullName>$User.Username</fullName>
                    <isActive>false</isActive>
                    <label>$User.Username</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive_Connector__c</fullName>
        <label>Incentive Connector %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Type_Applied__c</fullName>
        <label>Loan Type Applied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Loan</fullName>
                    <default>true</default>
                    <label>Business Loan</label>
                </value>
                <value>
                    <fullName>Loan against Property</fullName>
                </value>
                <value>
                    <fullName>Industrial or Commercial Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Amount__c</fullName>
        <label>Maximum Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_File_Input__c</fullName>
        <label>Maximum File Input</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Amount__c</fullName>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_File_Input__c</fullName>
        <label>Minimum File Input</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead - VYAPAR (SECURED LOAN)</fullName>
                    <default>true</default>
                    <label>Lead - VYAPAR (SECURED LOAN)</label>
                </value>
                <value>
                    <fullName>Lead - UDYAM (UNSECURED LOAN)</fullName>
                </value>
                <value>
                    <fullName>Lead - UCV</fullName>
                </value>
                <value>
                    <fullName>Lead - Rural Vyapar</fullName>
                </value>
                <value>
                    <fullName>Lead - Rural Udyam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Incentive</fullName>
                    <default>true</default>
                    <label>Regular Incentive</label>
                </value>
                <value>
                    <fullName>Contest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sourcing__c</fullName>
        <label>Sourcing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Non Direct</fullName>
                </value>
                <value>
                    <fullName>DSA</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSA</fullName>
                    <default>true</default>
                    <label>DSA</label>
                </value>
                <value>
                    <fullName>Salesperson</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WIRR_Higher_Limit__c</fullName>
        <label>WIRR Higher Limit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WIRR_Lower_Limit__c</fullName>
        <label>WIRR Lower Limit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Incentive Setup</label>
    <listViews>
        <fullName>Secured</fullName>
        <columns>MasterLabel</columns>
        <columns>Type__c</columns>
        <columns>WIRR_Lower_Limit__c</columns>
        <columns>WIRR_Higher_Limit__c</columns>
        <columns>Minimum_Amount__c</columns>
        <columns>Maximum_Amount__c</columns>
        <columns>Sourcing__c</columns>
        <columns>Incentive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Lead - VYAPAR (SECURED LOAN)</value>
        </filters>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Regular Incentive</value>
        </filters>
        <label>Secured</label>
    </listViews>
    <listViews>
        <fullName>Secured_for_Contest</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Contest</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Lead - VYAPAR (SECURED LOAN)</value>
        </filters>
        <label>Secured for Contest</label>
    </listViews>
    <listViews>
        <fullName>UCV</fullName>
        <columns>MasterLabel</columns>
        <columns>Product__c</columns>
        <columns>WIRR_Lower_Limit__c</columns>
        <columns>WIRR_Higher_Limit__c</columns>
        <columns>Minimum_Amount__c</columns>
        <columns>Maximum_Amount__c</columns>
        <columns>Incentive__c</columns>
        <columns>Sourcing__c</columns>
        <columns>Eligible_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Lead - UCV</value>
        </filters>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Regular Incentive</value>
        </filters>
        <label>UCV</label>
    </listViews>
    <listViews>
        <fullName>UCV_for_contest</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Contest</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Lead - UCV</value>
        </filters>
        <label>UCV for contest</label>
    </listViews>
    <listViews>
        <fullName>UnSecured</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Minimum_Amount__c</columns>
        <columns>Maximum_Amount__c</columns>
        <columns>Product__c</columns>
        <columns>Sourcing__c</columns>
        <columns>Type__c</columns>
        <columns>Incentive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Lead - UDYAM (UNSECURED LOAN)</value>
        </filters>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Regular Incentive</value>
        </filters>
        <label>UnSecured</label>
    </listViews>
    <listViews>
        <fullName>unsecured_for_contest</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Contest</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Lead - UDYAM (UNSECURED LOAN)</value>
        </filters>
        <label>unsecured for contest</label>
    </listViews>
    <pluralLabel>Incentive Setups</pluralLabel>
</CustomObject>